# idd

./: .gitignore  BuildFlags.cmake  CMakeLists.txt  README.md
apps/capture/: CMakeLists.txt  main.cpp
ext/mvIMPACT_acquire-x86_64-2.12.5/: .gitignore  Build.info
ext/mvIMPACT_acquire-x86_64-2.12.5/DriverBase/Include/: mvVersionInfo.h
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/: .Makefile.samp.inc.swp  Makefile.samp.inc
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/Callback/: Callback.cpp
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/Callback/x86_64/: Callback
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/Callback_C/: Callback.c
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/Callback_C/x86_64/: Callback
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/Common/: Info.h
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/ContinuousCaptureAllDevices/x86_64/: ContinuousCaptureAllDevicesLIN
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/DigitalIOs/: DigitalIOs.cpp
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/DigitalIOs/x86_64/: DigitalIOs
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/FirmwareUpgrade/x86_64/: FirmwareUpgrade
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/GenICamInterfaceLayout/x86_64/: GenICamInterfaceLayout
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/LiveSnapFLTK/: LiveSnapFLTK.cpp
ext/mvIMPACT_acquire-x86_64-2.12.5/apps/mvPropView/: PropViewFrame.cpp
ext/mvIMPACT_acquire-x86_64-2.12.5/mvIMPACT_CPP/: mvIMPACT_acquire.h  mvIMPACT_acquire_GenICam.h  versionInfo.txt
libraries/camera_player/: CMakeLists.txt  CameraPlayer.cpp  CameraPlayer.hpp  SaveBMP.hpp
(+11 files in other folders)
